More teleport commands added and data from DBC
Load of AreaPOI.DBC, AreaTrigger.DBC and WorldSafeLocs.DBC to teleport
you.

Included more teleport/list commands:

- telelist: List all the teleport locations from DB. If given, filter
the locations by string (case insensitive)
Usage: !telelist [#string]
Example:
!telelist    -> Will show all teleport locations from DB
!telelist storm -> Will show all teleport locations containing "storm"

- listPOI: Lists all POIs from DBC file. If given, filter the POIs by
string (case insensitive)
The result is a list of pairs {POI Name} -> {ID}
Note: POIs on AreaPOI.DBC don't have a value for Z or Orientation.

Usage: !listPOI [#string]
Example:
!listPOI    -> Will show all points of interest from DBC
!listPOI storm -> Will show all Points Of Interest from DBC containing
"storm"

- goPOI: teleports you to a POI from DBC file, identified by ID. If
given uses the Z coord.
Usage: !goPOI #ID [#z]
Example:
!goPOI 2696   -> Will teleport you to Draenei ruins
!goPOI 2696 500 -> Will teleport you to Draenei ruins, at Z=500

- listLocs: Lists all WorldSafeLocs from DBC file. If given, filter the
locations by string (case insensitive)
Usage: !listSafeLocs [#string]
Example:
!listSafeLocs     -> Will show all locations from DBC
!listSafeLocs thunder -> Will show all locations from DBC containing
"thunder"

- goLoc: Teleports you to a WorldSafeLoc from DBC file identified by the
given ID
Usage: !goLoc #ID
Example:
!goLoc 4370 -> Will teleport you to Valley of the Four Winds

--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -64,6 +64,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientDB\CustomTypes\Unused.cs" />
+    <Compile Include="ClientDB\Structures\Dbc\AreaPOI.cs" />
+    <Compile Include="ClientDB\Structures\Dbc\AreaTrigger.cs" />
     <Compile Include="ClientDB\Structures\Dbc\ChrClasses.cs" />
     <Compile Include="ClientDB\Structures\Dbc\ChrSpecialization.cs" />
     <Compile Include="ClientDB\Structures\Dbc\NameGen.cs" />
@@ -71,6 +73,7 @@
     <Compile Include="ClientDB\Structures\Dbc\Spell.cs" />
     <Compile Include="ClientDB\Structures\Dbc\SpellLevels.cs" />
     <Compile Include="ClientDB\Structures\Dbc\Talent.cs" />
+    <Compile Include="ClientDB\Structures\Dbc\WorldSafeLocs.cs" />
     <Compile Include="Configuration\Config.cs" />
     <Compile Include="Configuration\RealmConfig.cs" />
     <Compile Include="Configuration\WorldConfig.cs" />
