Added Afk/Dnd status management
- Afk/Dnd status for players on name plate (when allowed)
- Behaviour as in retail: Automatic response on whispers, custom afk/dnd
messages...

--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Constants\ObjectType.cs" />
     <Compile Include="Constants\Movement\MovementFlags2.cs" />
     <Compile Include="Constants\Account\Roles.cs" />
+    <Compile Include="Constants\PlayerFlags.cs" />
     <Compile Include="Constants\UpdateFields\UpdateFieldFlags.cs" />
     <Compile Include="Constants\UpdateFields\UpdateFields.cs" />
     <Compile Include="Constants\UpdateFlags.cs" />
