Updates from main repo & full playeremote support
- Updates from last commit from Fabi's repo
(15460c5d05dd1a1cb8b396f755d6ed3a5bfae05f)
- Full PlayerEmote support (text emote, animations, stand state
changes...)
- Corrected logout animation to match retail (your char will sit down
during countdown and stand up if canceled)

--- a/Framework/Configs/WorldServer.conf
+++ b/Framework/Configs/WorldServer.conf
@@ -54,3 +54,15 @@ MySql.MaxPoolSize  = 150
 ##########################################################################
 
 LogLevel = 0xB
+
+##########################################################################
+# Motd (Message of the day)
+#   Description
+#     Set the motd which is send to every user on login.
+#     Use "\n" (without quotes) to make a new line.
+#   Default
+#     Arctium MoP test\nWelcome to our MoP server test.\nYour development team =)
+#
+##########################################################################
+
+Motd = "Arctium MoP test\nWelcome to our MoP server test.\nYour development team =)"
