Added SetMoveRotationSpeed + Who List
Added SetMoveRotationSpeed packet & console command
Added Who List management (social -> who -> search)
Note: Still no Guild management, so it's not possible to filter by guild
name yet.

--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Compile Include="ClientDB\CustomTypes\Unused.cs" />
     <Compile Include="ClientDB\Structures\Dbc\AreaPOI.cs" />
+    <Compile Include="ClientDB\Structures\Dbc\AreaTable.cs" />
     <Compile Include="ClientDB\Structures\Dbc\AreaTrigger.cs" />
     <Compile Include="ClientDB\Structures\Dbc\ChrClasses.cs" />
     <Compile Include="ClientDB\Structures\Dbc\ChrSpecialization.cs" />
