--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Game\Packets\PacketHandler\TimeHandler.cs" />
     <Compile Include="Game\Packets\PacketHandler\TutorialHandler.cs" />
     <Compile Include="Game\Packets\PacketHandler\ObjectHandler.cs" />
+    <Compile Include="Game\Packets\PacketHandler\WhoHandler.cs" />
     <Compile Include="Game\Packets\PacketManager.cs" />
     <Compile Include="Game\Spawns\CreatureSpawn.cs" />
     <Compile Include="Game\Spawns\GameObjectSpawn.cs" />
