Rewrite addon support and some cleanups
As @Fabi pointed, I fixed the data types and done some cleanups on
usings.

Upgraded Addon support to use the Manager/Handler paradigm:

- Manager: Load addon data from DB on memory (no more DB queries "in the
middle"); Stores all valid Addon data and gives a GetAddon method for
the handler

- Handler: Read/Write addon data as needed; Fills session list for
Addons with right data. As no client message for addons exists (it's
embedded inside Auth packet), no handler for to read, but handler to
manage data from the uncompressed buffer from that packet; There's a
client message, with right handler based on addon values stored on
character session.

Now, you can change the file(s) to fit your needs (in example, if no
addon management needed, you can use fixed values for the handlers and
skip the manager).

--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Game\ObjectDefines\CreatureStats.cs" />
     <Compile Include="Game\ObjectDefines\GameObjectStats.cs" />
     <Compile Include="Game\ObjectDefines\Talent.cs" />
+    <Compile Include="Game\Packets\PacketHandler\AddonHandler.cs" />
     <Compile Include="Game\Packets\PacketHandler\AuthenticationHandler.cs" />
     <Compile Include="Game\Packets\PacketHandler\CacheHandler.cs" />
     <Compile Include="Game\Packets\PacketHandler\CharacterHandler.cs" />
