--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -82,11 +82,13 @@
     <Compile Include="Game\ObjectDefines\CreatureStats.cs" />
     <Compile Include="Game\ObjectDefines\GameObjectStats.cs" />
     <Compile Include="Game\ObjectDefines\Talent.cs" />
+    <Compile Include="Game\Packets\PacketHandler\AddonHandler.cs" />
     <Compile Include="Game\Packets\PacketHandler\AuthenticationHandler.cs" />
     <Compile Include="Game\Packets\PacketHandler\CacheHandler.cs" />
     <Compile Include="Game\Packets\PacketHandler\CharacterHandler.cs" />
     <Compile Include="Game\Packets\PacketHandler\ChatHandler.cs" />
     <Compile Include="Game\Packets\PacketHandler\CinematicHandler.cs" />
+    <Compile Include="Game\Packets\PacketHandler\EmoteHandler.cs" />
     <Compile Include="Game\Packets\PacketHandler\GossipHandler.cs" />
     <Compile Include="Game\Packets\PacketHandler\LogoutHandler.cs" />
     <Compile Include="Game\Packets\PacketHandler\MiscHandler.cs" />
